# api/src/dto/game.dto.ts
@@ -1,16 +1,15 @@
 export interface GameHistoryDTO {
-    gameId: number;
-    whitePlayerName: string;
-    blackPlayerName: string;
-    isPublic: boolean;
-    winner: string | null;
-    status: string;
-  }
-
-export interface CreateGameDTO {
-    userId: number;
-    whitePlayerName: string;
-    blackPlayerName: string;
-    isPublic: boolean;
+  game_id: number;
+  whitePlayerName: string;
+  blackPlayerName: string;
+  isPublic: boolean;
+  winner: string | null;
+  status: string;
 }
 
+export interface CreateGameDTO {
+  userId: number;
+  whitePlayerName: string;
+  blackPlayerName: string;
+  isPublic: boolean;
+}
